# backend/docs/swagger.json
@@ -604,6 +604,9 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/command.UserPayload"
                 }
             }
         },
@@ -655,6 +658,26 @@
                     }
                 },
                 "qr_uri": {
+                    "type": "string"
+                }
+            }
+        },
+        "command.UserPayload": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "mfa_enabled": {
+                    "type": "boolean"
+                },
+                "role_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "username": {
                     "type": "string"
                 }
             }
